--- a/src/app/components/manager/manager.component.html
+++ b/src/app/components/manager/manager.component.html
@@ -53,7 +53,7 @@
                   <td>{{item.status2}}</td>
                   <td>{{item.statusAprobacion}}</td>
                   
-                  <td><a type="button" class="nav-link active"  routerLink="authorize/{{item.id_solicitud}}" >Mostrar datos</a></td>
+                  <td><a type="button" class="nav-link active"  routerLink="autorizar/{{item.id_solicitud}}" >Mostrar datos</a></td>
                 </tr>   
               </tbody>
             </table>
