--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -7,14 +7,14 @@
       </a>
     </div>
 
-    <form class="rounded mb-0 m-4 p-4">
+    <form class="rounded mb-0 m-4 p-4 needs-validation novalidate">
       <label for="isProductDiscounted" class=""><b>Datos generales</b></label>
       <br />
       <br />
 
       <label for="inputAddress2">Nombre Completo:</label>
       <div class="input-group">
-        <span class="input-group-text">
+        <span class="f1 input-group-text">
           <i class="fas fa-file-signature"></i>
         </span>
         <input
@@ -22,8 +22,10 @@
           class="f1 form-control"
           placeholder="Nombre del solicitante"
           name="solicitante"
+          id="txtName"
           [(ngModel)]="solicitud.solicitante"
-          required="required"
+        
+          required
         />
         <datalist id="items">
           <option>Arturo Carrazco</option>
@@ -34,56 +36,64 @@
       <br />
       <label for="inputAddress2">Correo:</label>
       <div class="input-group flex-nowrap">
-        <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+        <span class="f1 input-group-text"><i class="fas fa-envelope"></i></span>
         <input
           type="email"
+          id="txtmail"
           class="f1 form-control"
           placeholder="e-mail"
           name="proveedor"
-          [(ngModel)]="solicitud.correoSolicitante"
-        />
+          ngModel [email]="true"/>
+        
+        <span id="emailOK"></span>
       </div>
       <br />
       <label for="inputAddress2">Area:</label>
       <div class="input-group flex-nowrap">
-        <span class="input-group-text"><i class="fas fa-location"></i></span>
+        <span class="f1 input-group-text"><i class="fas fa-location"></i></span>
         <input
           type="text"
+          id="txtArea"
           class="f1 form-control"
           placeholder="Area"
           name="area"
           [(ngModel)]="solicitud.area"
+          required
         />
       </div>
 
       <br />
       <label for="inputAddress2">Fecha:</label>
       <div class="input-group flex-nowrap">
-        <span class="input-group-text">
+        <span class="f1 input-group-text">
           <i class="fas fa-calendar-alt"></i>
         </span>
         <input
           type="date"
+          id="datFecha"
           class="f1 form-control"
           placeholder="MM/DD/YYYY"
           onfocus="(this.type='date')"
           name="fecha"
           [(ngModel)]="solicitud.fechaSolicitud"
+          required
         />
       </div>
       <br />
 
-      <label for="inputAddress2">Proveedor:</label>
+      <label for=" inputAddress2">Proveedor:</label>
       <div class="input-group flex-nowrap">
-        <span class="input-group-text">
+        <span class="f1 input-group-text">
           <i class="fas fa-parachute-box"></i>
         </span>
         <input
           type="text"
-          class="form-control"
+          id="txtproveedor"
+          class="f1 form-control"
           placeholder="Nombre del proveedor"
           name="provedor"
           [(ngModel)]="solicitud.provedor"
+          required
         />
       </div>
       <br />
@@ -92,7 +102,7 @@
   <!--dopdown motivo-->
                       
   <div class="">
-    <label for="isProductDiscounted" class=""><b>Cual es el motivo?</b></label>
+    <label for="isProductDiscounted" class=""><b>¿Cual es el motivo?</b></label>
     <br>
     <div class=" " data-toggle="buttons" name="isProductDiscounted">
         <br>
@@ -114,14 +124,13 @@
             </select>
             <div class="form-group">
               <label for="discountPercentage" class="">Escriba el motivo</label>
-              <input type="text" class="form-control" id="discountPercentage"  name="Motivo"   disabled>
+              <input type="text" class="f1 form-control" id="discountPercentage"  name="Motivo"   disabled>
               <small class="form-text text-danger" th:if="${#fields.hasErrors('discountPercentage')}" th:errors="*{discountPercentage}"></small>
             </div>
             <!--fin de lista desplegable-->
 
       
-      <label class="btn btn btn-blue-grey waves-effect form-check-label w-50">
-             </label>
+      
     </div>
   </div>
   
@@ -142,7 +151,7 @@
       <div class=" " data-toggle="buttons" name="isProductDiscounted">
         <label for="inputAddress2">Ticket para:</label>
         <!--lista desplegable-->
-        <select for="ticket" id="ticket" name="ticket" class="form-control">
+        <select for="ticket" id="ticket" name="ticket" class="f1 form-control">
           <br />
           <option value="1" selected="selected">Seleccione...</option>
           <option value="Refacción">Refacción</option>
@@ -151,22 +160,22 @@
 
         <!--fin de lista desplegable-->
 
-        <label
-          class="btn btn btn-blue-grey waves-effect form-check-label w-50"
-        ></label>
+       
       </div>
       <br />
       <label for="inputAddress2">Descripción:</label>
       <div class="input-group flex-nowrap">
-        <span class="input-group-text">
+        <span class="f1 input-group-text">
           <i class="fas fa-file-signature"></i>
         </span>
         <textarea
+        id="txtDescripcion"
           type="text"
-          class="form-control"
+          class=" f1 form-control"
           placeholder="Descripción sobre los artículos"
           name="descripcion"
           [(ngModel)]="solicitud.descripcion"
+          required="required"
         ></textarea>
       </div>
       <!-- <br>
@@ -204,7 +213,7 @@
       <br />
       <div class="form-check">
         <input
-          class="form-check-input"
+          class="  form-check-input"
           type="radio"
           name="flexRadioDefault"
           id="radioNo"
@@ -221,7 +230,7 @@
       <div class="input-group flex-nowrap">
         <textarea
           type="text"
-          class="form-control"
+          class="f1 form-control"
           placeholder="Observaciones"
           name="observaciones"
           [(ngModel)]="solicitud.observaciones"
@@ -231,8 +240,8 @@
       <div class="d-grid gap-2">
         <!-- <button type="button" class="btn btn-success btn.lg" (click)="onSetData(); onAddSolicitud(solicitud)"><i class="fas fa-paper-plane"></i> Solicitar</button> -->
         <button
-          type="button"
-          class="btn btn-success btn.lg"
+          type="submit"
+          class="btnenvia btn btn-success btn.lg"
           (click)="onAddSolicitud(solicitud)"
         >
           <i class="fas fa-paper-plane"></i>
@@ -249,7 +258,7 @@
     <div class="sticky-container colored-icons">
       <ul class="sticky">
         <li>
-          <img src="./assets/infoplus.png" width="56" height="56" />
+          <img src="./assets/info.png" width="56" height="56" />
           <p>
             <a href="general" target="_blank">
               Solicitudes:
@@ -283,3 +292,6 @@
     </div>
   </div>
 </body>
+
+
+
