--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,72 +1,93 @@
-/* Bordered form */
-form {
-  border: 3px solid #f1f1f1;
-}
-
-/* Full-width inputs */
-input[type='text'],
-input[type='password'] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
-/* Set a style for all buttons */
-button {
-  background-color: #04aa6d;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
-
-/* Add a hover effect for buttons */
-button:hover {
-  opacity: 0.8;
-}
-
-/* Extra style for the cancel button (red) */
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
-}
-
-/* Center the avatar image inside this container */
-.imgcontainer {
+.form-container{
+  background: linear-gradient(150deg,#212529 33%,#54595d 34%,#54595d 66%,#a6383b 67%);
+  font-family: 'Raleway', sans-serif;
   text-align: center;
-  margin: 24px 0 12px 0;
+  padding: 30px 20px 50px;
 }
-
-/* Avatar image */
-img.avatar {
-  width: 40%;
+.form-container .title{
+  color: #fff;
+  font-size: 23px;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  margin: 0 0 60px;
+}
+.form-container .form-horizontal{
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.4);
+}
+.form-horizontal .form-icon{
+  color: #fff;
+  background-color: #1B394D;
+  font-size: 75px;
+  line-height: 92px;
+  height: 90px;
+  width: 90px;
+  margin: -65px auto 10px;
   border-radius: 50%;
 }
-
-/* Add padding to containers */
-.container {
-  padding: 16px;
+.form-horizontal .form-group{
+  margin: 0 0 10px;
+  position: relative;
 }
-
-/* The "Forgot password" text */
-span.psw {
-  float: right;
-  padding-top: 16px;
+.form-horizontal .form-group:nth-child(3){ margin-bottom: 30px; }
+.form-horizontal .form-group .input-icon{
+  color: #e7e7e7;
+  font-size: 23px;
+  position: absolute;
+  left: 0;
+  top: 10px;
 }
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-  span.psw {
-    display: block;
-    float: none;
-  }
-  .cancelbtn {
-    width: 100%;
-  }
+.form-horizontal .form-control{
+  color: #000;
+  font-size: 16px;
+  font-weight: 600;
+  height: 50px;
+  padding: 10px 10px 10px 40px;
+  margin: 0 0 5px;
+  border: none;
+  border-bottom: 2px solid #e7e7e7;
+  border-radius: 0px;
+  box-shadow: none;
+}
+.form-horizontal .form-control:focus{
+  box-shadow: none;
+  border-bottom-color: #a6383b;
+}
+.form-horizontal .form-control::placeholder{
+  color: #000;
+  font-size: 16px;
+  font-weight: 600;
+}
+.form-horizontal .forgot{
+  font-size: 13px;
+  font-weight: 600;
+  text-align: right;
+  display: block;
+}
+.form-horizontal .forgot a{
+  color: #777;
+  transition: all 0.3s ease 0s;
+}
+.form-horizontal .forgot a:hover{
+  color: #777;
+  text-decoration:  underline;
+}
+.form-horizontal .signin{
+  color: #fff;
+  background-color: #a6383b;
+  font-size: 17px;
+  text-transform: capitalize;
+  letter-spacing: 2px;
+  width: 100%;
+  padding: 12px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  transition: all 0.4s ease 0s;
+}
+.form-horizontal .signin:hover,
+.form-horizontal .signin:focus{
+  font-weight: 600;
+  letter-spacing: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3) inset;
 }
