--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,29 @@
-<div class="container">
-  <label for="uname"><b>Username</b></label>
-  <input type="text" placeholder="Enter Username"  id="idUsername" name="username" />
 
-  <label for="psw"><b>Password</b></label>
-  <input type="password" id="idPassword" placeholder="Enter Password" name="password1" />
 
-  <button mat-raised-button (click)="login()">Login</button> 
- 
+<br><br>
+<div class="form-bg">
+  <div class="container">
+      <div class="row">
+          <div class="col-md-offset-4 col-md-4 col-sm-offset-3 col-sm-6">
+              <div class="form-container">
+                  <h3 class="title title1"><b style="color:#a6383b ;">BFX</b> Flow</h3>
+                  <form class="form-horizontal">
+                      <div class="form-icon">
+                          <i class="fa fa-user-circle"></i>
+                      </div>
+                      <div class="form-group">
+                          <span class="input-icon"><i class="fa fa-user"></i></span>
+                          <input type="text" id="username" class="form-control" placeholder="Usuario">
+                      </div>
+                      <div class="form-group">
+                          <span class="input-icon"><i class="fa fa-lock"></i></span>
+                          <input type="password" class="form-control" id="password" placeholder="Contraseña">
+                          <!--<span class="forgot"><a href="">Forgot Password?</a></span>-->
+                      </div>
+                      <button class="btn signin" (click)="login()">Iniciar sesión</button>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
 </div>
