--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -34,20 +34,20 @@
           <a class="nav-link" href="output-active">Salida Activo</a>
         </li>-->
         <li class="nav-item">
-          <a class="nav-link" id="vigilancia" href="vigilance">
+          <a class="nav-link" id="vigilancia" href="vigilancia">
             <i class="fas fa-shield"></i>
             Vigilancia
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="compras" href="monitoring">
+          <a class="nav-link" id="compras" href="monitoreo-Compras">
             <i class="fa-solid fa-cash-register"></i>
             Monitoreo Compras
           </a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" id="almacen" href="monitoreo2">
+          <a class="nav-link" id="almacen" href="monitoreo-Almacen">
             <i class="fa-solid fa-warehouse"></i>
             Monitoreo Almacen
           </a>
@@ -56,7 +56,7 @@
           <a class="nav-link" href="active-return">Regreso Activo</a>
         </li>-->
         <li class="nav-item">
-          <a class="nav-link" id="manager" href="manager">
+          <a class="nav-link" id="manager" href="Administrador">
             <i class="fas fa-crown"></i>
             Manager
           </a>
