--- a/src/app/components/vigilancia/vigilancia.component.html
+++ b/src/app/components/vigilancia/vigilancia.component.html
@@ -1,17 +1,130 @@
 <app-navbar></app-navbar>
-<br>
+<br />
 
- 
- 
+
+
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+<!--search-->
+
+<div class="input-group input-group-sm mb-3">
+  <div class="input-group-prepend">
+    <span class="serch input-group-text" id="inputGroup-sizing-sm"><i class="fa-solid fa-magnifying-glass"></i></span>
+  </div>
+  <input type="text" class=" form-control" aria-label="Small" id="search" placeholder="buscar un registro...">
+</div>
+<!--search-->
+  <li class="nav-item" role="presentation">
+  <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Por salir</button>
+  </li>
+  <li class="nav-item" role="presentation">
+  <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Por regresar</button>
+  </li>
+
+  </ul>
+  <div class="tab-content" id="myTabContent">
+  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+    <br>
+    <!--inicia-->
+<div class="container">
+  
+  <div class="table-responsive">
+    <table class="table" id="tblDatos">
+      <thead>
+        <tr>
+          <th  class="id">#</th>
+          
+         <th  class="cabezaras">Detalles</th>
+          <th  class="cabezaras" style="text-align:center;"><i class="fas fa-check-square"></i></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of datatable" style="width: 100%;">
+        <td class="id">{{ item.id_solicitud }}</td>
+         <!-- <td>{{ item.solicitante }}</td>--> 
+         
+           <td>
+            <div class="tarjeta">
+              <p>Los articulos; 
+                <b>{{item.descripcion}},</b> han sido entregados a <b> {{ item.nombreProvedor}}</b> el día <b>{{item.fechaSalida}}</b> con motivo de <b>{{item.motivo}}</b>. </p>
+           
+            </div>
+         
+    
+    
+    
+           </td>
+           <!-- <td>{{ item.motivo }}</td></td>--> 
+           <!--  <td>{{ item.descripcion }}</td>--> 
+        
+         <!--  <td>{{ item.autorizador }}</td>--> 
+          
+          
+          <div
+            *ngIf="item.validarSalida !== ''; then thenBlock; else elseBlock"
+          ></div>
+          <ng-template #thenBlock>
+            <td>
+             
+              <button
+                type="bu"
+                class="btn btn-success btn-sm"
+                (click)="onSetData1(item); onUpdateSalida(solicitud)"
+                disabled
+              >
+               Confirmar salida
+              </button>
+            </td>
+          </ng-template>
+          <ng-template #elseBlock>
+            <div
+            *ngIf="item.status2 === 'En reparación con'; then sale else nosale"
+          ></div>
+           <ng-template #sale>
+            <td>
+              
+              <button
+              
+                type="bu"
+                class="btn btn-success btn-sm"
+                (click)="onSetData1(item); onUpdateSalida(solicitud)"
+                
+              >
+              Confirmar salida
+              </button>
+            </td>
+           </ng-template>
+           <ng-template #nosale>
+            <td>
+              <button
+              disabled
+                type="bu"
+                class="btn btn-success btn-sm"
+                (click)="onSetData1(item); onUpdateSalida(solicitud)"
+                
+              >
+              Confirmar salida
+              </button>
+            </td>
+           </ng-template>
+            
+          </ng-template>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>    <!--inicia-->
+
+
 <!--tabla nueva-->
 
-<div class="container">
-  <div class="input-group input-group-sm mb-3">
-    <div class="input-group-prepend">
-      <span class="serch input-group-text" id="inputGroup-sizing-sm"><i class="fa-solid fa-magnifying-glass"></i></span>
     </div>
-    <input type="text" class=" form-control" aria-label="Small" id="search" placeholder="buscar un registro...">
-  </div>
+    <!--2-->
+  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+
+    <br>
+    <!--inicia-->
+<div class="container">
+  
   <div class="table-responsive">
     <table class="table" id="tblDatos">
       <thead>
@@ -56,7 +169,7 @@
                 (click)="onSetData1(item); onUpdateSalida(solicitud)"
                 disabled
               >
-               Confirmar
+               Confirmar regreso
               </button>
             </td>
           </ng-template>
@@ -74,7 +187,7 @@
                 (click)="onSetData1(item); onUpdateSalida(solicitud)"
                 
               >
-              Confirmar
+              Confirmar regreso
               </button>
             </td>
            </ng-template>
@@ -87,7 +200,7 @@
                 (click)="onSetData1(item); onUpdateSalida(solicitud)"
                 
               >
-              Confirmar
+              Confirmar regreso
               </button>
             </td>
            </ng-template>
@@ -97,7 +210,53 @@
       </tbody>
     </table>
   </div>
-  <div id="paginador"></div>
+  
+</div>    <!--inicia-->
+
+
+<!--tabla nueva-->
+
+  </div>
+
+
+
+  
+  </div>
+
+
+
+
+
+
+
+
+
+<!--viejo-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
+ 
+<!--tabla nueva-->
+
+<div class="container">
+  
+  <div class="table-responsive">
+   
+  </div>
+  
 </div> 
 
 
