--- a/src/app/components/monitoreo-compras/monitoreo-compras.component.html
+++ b/src/app/components/monitoreo-compras/monitoreo-compras.component.html
@@ -86,7 +86,7 @@
               
             </button>
           </td>
-          <td>  <a type="button" class="btn btn-primary"  routerLink="HistorialComents/{{item.id_solicitud}}" >historial</a></td>
+          <td>  <a type="button" class="btn btn-primary"  routerLink="Historial-Comentario/{{item.id_solicitud}}" >historial</a></td>
           
           
                          </tr>
@@ -166,7 +166,7 @@
               
             </button>
           </td>
-          <td>  <a type="button" class="btn btn-danger"  routerLink="HistorialComents/{{item.id_solicitud}}" >historial</a></td>
+          <td>  <a type="button" class="btn btn-danger"  routerLink="Historial-Comentario/{{item.id_solicitud}}">historial</a></td>
           
           
                          </tr>
@@ -248,7 +248,7 @@
               
             </button>
           </td>
-          <td>  <a type="button" class="btn btn-success"  routerLink="HistorialComents/{{item.id_solicitud}}" >historial</a></td>
+          <td>  <a type="button" class="btn btn-success" routerLink="Historial-Comentario/{{item.id_solicitud}}" >historial</a></td>
           
           
                          </tr>
