--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
       <hr class="divi" />
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" id="formulario" aria-current="page" href="form">
+          <a class="nav-link" id="formulario" aria-current="page" routerLink="/form">
             <i class="fab fa-wpforms"></i>
             Formulario
           </a>
@@ -34,20 +34,20 @@
           <a class="nav-link" href="output-active">Salida Activo</a>
         </li>-->
         <li class="nav-item">
-          <a class="nav-link" id="vigilancia" href="vigilancia">
+          <a class="nav-link" id="vigilancia" routerLink="/vigilancia">
             <i class="fas fa-shield"></i>
             Vigilancia
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="compras" href="monitoreo-Compras">
+          <a class="nav-link" id="compras" routerLink="/monitoreo-Compras">
             <i class="fa-solid fa-cash-register"></i>
             Monitoreo Compras
           </a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" id="almacen" href="monitoreo-Almacen">
+          <a class="nav-link" id="almacen" routerLink="/monitoreo-Almacen">
             <i class="fa-solid fa-warehouse"></i>
             Monitoreo Almacen
           </a>
@@ -56,7 +56,7 @@
           <a class="nav-link" href="active-return">Regreso Activo</a>
         </li>-->
         <li class="nav-item">
-          <a class="nav-link" id="manager" href="Administrador">
+          <a class="nav-link" id="manager" routerLink="/Administrador">
             <i class="fas fa-crown"></i>
             Manager
           </a>
