--- a/src/app/components/vigilancia/vigilancia.component.html
+++ b/src/app/components/vigilancia/vigilancia.component.html
@@ -45,7 +45,7 @@
            <td>
             <div class="tarjeta">
               <p>Los articulos; 
-                <b>{{item.descripcion}},</b> han sido entregados a <b> {{ item.nombreProvedor}}</b> el día <b>{{item.fechaSalida}}</b> con motivo de <b>{{item.motivo}}</b>. </p>
+                <b>{{item.descripcion}},</b> entregados a <b> {{ item.nombreProvedor}}</b> el día <b>{{item.fechaSalida}}</b> con motivo de <b>{{item.motivo}} </b> requieren ser validados. </p>
            
             </div>
          
@@ -256,7 +256,7 @@
               <div class="input-field"> <span class="far fa-user p-2"></span> <input id="user" type="text" placeholder="Usuario" required class=""> </div>
           </div>
           <div class="form-group py-1 pb-2">
-              <div class="input-field"> <span class="fas fa-lock p-2"></span> <input id="pass" type="text" placeholder="Contraseña" required class=""> <button class="btn bg-white text-muted"> <span class="far fa-eye-slash"></span> </button> </div>
+              <div class="input-field"> <span class="fas fa-lock p-2"></span> <input id="pass" type="password" placeholder="Contraseña" required class=""> <button class="btn bg-white text-muted"></button> </div>
           </div>
           <div class="d-flex align-items-start">
             
