--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -10,8 +10,14 @@
   float: top;
 }
 .navs {
+  
   color: black;
 }
 .divi {
   background-color: aliceblue;
+}
+.nav{
+
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+
 }
