--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="nav navbar navbar-expand-lg navbar-dark bg-dark " >
   <div class="container-fluid">
-    <a href="login">
+    <a routerLink="">
       <img
         src="https://www.bioflex.mx/wp-content/uploads/2020/07/logo_bioflex-01.png"
         class="img1"
-        href="#"
+        routerLink=""
       />
     </a>
 
@@ -33,7 +33,7 @@
         <!--<li class="nav-item">
           <a class="nav-link" href="output-active">Salida Activo</a>
         </li>-->
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" id="vigilancia" routerLink="/vigilancia">
             <i class="fas fa-shield"></i>
             Vigilancia
@@ -51,16 +51,16 @@
             <i class="fa-solid fa-warehouse"></i>
             Monitoreo Almacen
           </a>
-        </li>
+        </li> -->
         <!--<li class="nav-item">
           <a class="nav-link" href="active-return">Regreso Activo</a>
         </li>-->
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" id="manager" routerLink="/Administrador">
             <i class="fas fa-crown"></i>
             Manager
           </a>
-        </li>
+        </li> -->
 
         <!-- <li class="nav-item">
           <a class="nav-link " id="manager" href="general"><i class="fas fa-crown "></i> b</a>
