--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,29 +1,39 @@
-
-
+<body class="m-0 row justify-content-center">
+    
+        <div class="v1 navega card-header">
+          <a class="" href="#">
+            <img src="./assets/bioflex.png" style="height: 50px;" />
+          </a>
+        </div>
 <br><br>
-<div class="form-bg">
-  <div class="container">
-      <div class="row">
-          <div class="col-md-offset-4 col-md-4 col-sm-offset-3 col-sm-6">
-              <div class="form-container">
-                  <h3 class="title title1"><b style="color:#a6383b ;">BFX</b> Flow</h3>
-                  <form class="form-horizontal">
-                      <div class="form-icon">
-                          <i class="fa fa-user-circle"></i>
-                      </div>
-                      <div class="form-group">
-                          <span class="input-icon"><i class="fa fa-user"></i></span>
-                          <input type="text" id="username" class="form-control" placeholder="Usuario">
-                      </div>
-                      <div class="form-group">
-                          <span class="input-icon"><i class="fa fa-lock"></i></span>
-                          <input type="password" class="form-control" id="password" placeholder="Contraseña">
-                          <!--<span class="forgot"><a href="">Forgot Password?</a></span>-->
-                      </div>
-                      <button class="btn signin" (click)="login()">Iniciar sesión</button>
-                  </form>
-              </div>
-          </div>
-      </div>
-  </div>
-</div>
+
+
+   
+        <div class="col-auto p-5 text-center ">
+            <div class="row-9 ">
+                <div class="col-md-offset-4 col-md-12 col-sm-offset-4 col-sm-4 BS">
+                    <div class="form-container">
+                        <h3 class="title title1"><b style="color:#a6383b ;">BFX</b> Flow</h3>
+                        <form class="form-horizontal">
+                            <div class="form-icon">
+                                <i class="fa fa-user-circle"></i>
+                            </div>
+                            <div class="form-group">
+                                <span class="input-icon"><i class="fa fa-user"></i></span>
+                                <input type="text" id="username" class="form-control" placeholder="Usuario">
+                            </div>
+                            <div class="form-group">
+                                <span class="input-icon"><i class="fa fa-lock"></i></span>
+                                <input type="password" class="form-control" id="password" placeholder="Contraseña">
+                                <!--<span class="forgot"><a href="">Forgot Password?</a></span>-->
+                            </div>
+                            <button class="btn signin" (click)="login()">Iniciar sesión</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+      
+
+
+</body>
