--- a/src/app/components/manager/manager.component.html
+++ b/src/app/components/manager/manager.component.html
@@ -50,7 +50,7 @@
                   <td>{{item.regresa}}</td>
                   <td>{{item.fechaRegreso}}</td>
                   <td>{{item.correoSolicitante}}</td>
-                  <td>{{item.status2}}</td>
+                  <td>{{item.status2}}: {{item.provedor}}</td>
                   <td>{{item.statusAprobacion}}</td>
                   
                   <td><a type="button" class="nav-link active"  routerLink="autorizar/{{item.id_solicitud}}" >Mostrar datos</a></td>
