--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -107,3 +107,12 @@
 .v2 {
   background-color: #ffffffea;
 }
+.footer {
+  position: absolute;
+  float: center;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 50px;
+  background-color: #f5f5f5;
+}
