--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -34,6 +34,16 @@
             </div>
         </div>
       
-
+        <footer class="footer col-auto p-2 text-center">
+            
+            <div class=" ">
+                <a href="/form"> Realizar una solicitud</a>
+               <br>
+               <p style="font-size:small ;color:red">BIOFLEX® <a style="color: black;">Empaques Flexibles.</a> </p>
+               
+            
+            </div>
+          
+          </footer>
 
 </body>
