--- a/src/app/components/autorizar/autorizar.component.html
+++ b/src/app/components/autorizar/autorizar.component.html
@@ -248,5 +248,69 @@
 </ng-template>
 
 
+
+
+
+ <!--modal para  salida de activo-->
+ <ng-template #template3>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">Rechazar solicitud</h4>
+    <button
+      type="button"
+      class="close pull-rigth"
+      aria-label="Close"
+      (click)="bsModalRef.hide()"
+    >
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <!--inicio-->
+  <div class="row-6 mt-5">
+    <div class="input-group mb-3 input-group-lg">
+      <span class="input-group-text" id="basic-addon1">Núm. solicitud:</span>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="id"
+        aria-label="Username"
+        aria-describedby="basic-addon1"
+        name="id"
+        id="txtid"
+        [(ngModel)]="solicitud.id_solicitud"
+        disabled="disabled"
+      />
+    </div>
+
+
+    <div class="input-group mb-3 input-group-lg">
+      <span class="input-group-text" id="basic-addon1">
+        Comentarios:
+      </span>
+      <textarea
+        type="text"
+        class="form-control"
+        placeholder="Motivo"
+        aria-label="Username"
+        aria-describedby="basic-addon1"
+        name="NombreProvedor"
+        id="txtMotivo"
+        [(ngModel)]="solicitud.comentariosAutorizador"
+      required="required"></textarea>
+    </div>
+  </div>
+
+  <div class="d-grid gap-2">
+    <button
+      type="button"
+      class="btn btn-danger"
+      (click)="onUpdateSalida(solicitud)"
+    >
+      Rechazar
+    </button>
+  </div>
+  <!--fin-->
+</ng-template>
+<!--modal para  salida de activo-->
+
 </body>
 </html>
